apache settings updated

--- a/templates/default/apache_site_default.erb
+++ b/templates/default/apache_site_default.erb
@@ -5,6 +5,8 @@ ProxyPreserveHost On
   ServerAdmin admin@<%= node['sonar']['web_domain'] %>
   ProxyPass / http://<%= node['sonar']['web_host'] %>:<%= node['sonar']['web_port'] %>/
   ProxyPassReverse / http://<%= node['sonar']['web_host'] %>:<%= node['sonar']['web_port'] %>/
-  ErrorLog logs/<%= node['sonar']['web_domain'] %>/sonar/error.log
-  CustomLog logs/<%= node['sonar']['web_domain'] %>/sonar/access.log common
+  
+  LogLevel info
+  ErrorLog <%= node['apache']['log_dir'] %>/<%= node['sonar']['web_domain'] %>-error.log
+  CustomLog <%= node['apache']['log_dir'] %>/<%= node['sonar']['web_domain'] %>-access.log combined
 </VirtualHost>
