--- a/templates/default/apache_site_default.erb
+++ b/templates/default/apache_site_default.erb
@@ -2,6 +2,7 @@ ProxyRequests Off
 ProxyPreserveHost On
 <VirtualHost *:80>
   ServerName <%= node['sonar']['web_domain'] %>
+  ServerAlias <%= node['sonar']['web_domain'] %>
   ServerAdmin admin@<%= node['sonar']['web_domain'] %>
   ProxyPass / http://<%= node['sonar']['web_host'] %>:<%= node['sonar']['web_port'] %>/
   ProxyPassReverse / http://<%= node['sonar']['web_host'] %>:<%= node['sonar']['web_port'] %>/
