--- a/templates/default/apache_site_default.erb
+++ b/templates/default/apache_site_default.erb
@@ -1,11 +1,21 @@
-ProxyRequests Off
-ProxyPreserveHost On
 <VirtualHost *:80>
   ServerName <%= node['sonar']['web_domain'] %>
   ServerAlias <%= node['sonar']['web_domain'] %>
-  ServerAdmin admin@<%= node['sonar']['web_domain'] %>
-  ProxyPass / http://<%= node['sonar']['web_host'] %>:<%= node['sonar']['web_port'] %>/
-  ProxyPassReverse / http://<%= node['sonar']['web_host'] %>:<%= node['sonar']['web_port'] %>/
+  
+  ProxyRequests Off
+  ProxyPreserveHost On
+  
+    # Local reverse proxy authorization override
+  # Most unix distribution deny proxy by default
+  # (ie /etc/apache2/mods-enabled/proxy.conf in Ubuntu)
+  <Proxy http://localhost:<%= node['sonar']['web_port'] %>/*>
+    Order deny,allow
+    Allow from all
+  </Proxy>
+  
+  ProxyPass / http://localhost:<%= node['sonar']['web_port'] %>/
+  ProxyPassReverse / http://localhost:<%= node['sonar']['web_port'] %>/
+  ProxyPassReverse  /  http://<%= node['sonar']['web_domain'] %>
   
   LogLevel info
   ErrorLog <%= node['apache']['log_dir'] %>/<%= node['sonar']['web_domain'] %>-error.log
